--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -96,7 +96,7 @@
     "@uniswap/analytics-events": "2.43.0",
     "@uniswap/client-explore": "0.0.17",
     "@uniswap/ethers-rs-mobile": "0.0.5",
-    "@uniswap/sdk-core": "7.7.2",
+    "@uniswap/sdk-core": "npm:@moonchain/swap-v3-sdk@0.0.2",
     "@walletconnect/core": "2.21.4",
     "@walletconnect/react-native-compat": "2.21.4",
     "@walletconnect/types": "2.21.4",
