--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -196,7 +196,7 @@
     "@uniswap/merkle-distributor": "1.0.1",
     "@uniswap/permit2-sdk": "1.3.0",
     "@uniswap/router-sdk": "2.0.2",
-    "@uniswap/sdk-core": "7.7.2",
+    "@uniswap/sdk-core": "npm:@moonchain/swap-v3-sdk@0.0.2",
     "@uniswap/token-lists": "1.0.0-beta.33",
     "@uniswap/uniswapx-sdk": "3.0.0-beta.7",
     "@uniswap/universal-router-sdk": "4.19.5",
