--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
     "@typescript-eslint/eslint-plugin": "6.20.0",
     "@typescript-eslint/parser": "6.20.0",
     "@uniswap/router-sdk": "2.0.2",
-    "@uniswap/sdk-core": "7.7.2",
+    "@uniswap/sdk-core": "npm:@moonchain/swap-v3-sdk@0.0.2",
     "@uniswap/v2-sdk": "4.15.2",
     "@vercel/og@0.5.8": "patch:@vercel/og@npm%3A0.5.8#./.yarn/patches/@vercel-og-npm-0.5.8-83a79f2744.patch",
     "@xmldom/xmldom": "0.7.7",
