--- a/packages/uniswap/package.json
+++ b/packages/uniswap/package.json
@@ -60,7 +60,7 @@
     "@uniswap/client-search": "0.0.9",
     "@uniswap/permit2-sdk": "1.3.0",
     "@uniswap/router-sdk": "2.0.2",
-    "@uniswap/sdk-core": "7.7.2",
+    "@uniswap/sdk-core": "npm:@moonchain/swap-v3-sdk@0.0.2",
     "@uniswap/uniswapx-sdk": "3.0.0-beta.7",
     "@uniswap/v2-sdk": "4.15.2",
     "@uniswap/v3-sdk": "3.25.2",
