--- a/packages/utilities/package.json
+++ b/packages/utilities/package.json
@@ -20,7 +20,7 @@
     "@tanstack/react-query": "5.77.2",
     "@uniswap/analytics": "1.7.2",
     "@uniswap/analytics-events": "2.43.0",
-    "@uniswap/sdk-core": "7.7.2",
+    "@uniswap/sdk-core": "npm:@moonchain/swap-v3-sdk@0.0.2",
     "dayjs": "1.11.7",
     "expo-localization": "16.0.1",
     "graphql": "16.6.0",
