--- a/packages/wallet/package.json
+++ b/packages/wallet/package.json
@@ -28,7 +28,7 @@
     "@uniswap/client-data-api": "0.0.14",
     "@uniswap/permit2-sdk": "1.3.0",
     "@uniswap/router-sdk": "2.0.2",
-    "@uniswap/sdk-core": "7.7.2",
+    "@uniswap/sdk-core": "npm:@moonchain/swap-v3-sdk@0.0.2",
     "@uniswap/universal-router-sdk": "4.19.5",
     "apollo3-cache-persist": "0.14.1",
     "dayjs": "1.11.7",
