--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -170,6 +170,7 @@
     "@graphql-codegen/typescript-react-apollo": "3.3.7",
     "@graphql-codegen/typescript-resolvers": "3.2.1",
     "@juggle/resize-observer": "3.4.0",
+    "@moonchain-mch/metadata": "0.0.1",
     "@popperjs/core": "2.11.8",
     "@reach/dialog": "0.10.5",
     "@reach/portal": "0.10.5",
